...
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/coordinate_layout"
    tools:context=".MapsActivity">


    <fragment
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:name="com.google.android.gms.maps.SupportMapFragment"/>


    <ToggleButton
        android:id="@+id/toggle_Campus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOn="@string/SGW_Campus_Name"
        android:textOff="@string/Loyola_Campus_Name"
        />

...
