<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/splash_fragment"
    tools:ignore="UnusedNavigation">

    <fragment
        android:id="@+id/splash_fragment"
        android:name="com.droidhats.campuscompass.views.SplashFragment"
        android:label="@string/splash_screen"
        tools:layout="@layout/splash_fragment" >
        <action
            android:id="@+id/action_splashFragment_to_mapsActivity"
            app:destination="@id/map_fragment"
            app:popUpTo="@id/splash_fragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/map_fragment"
        android:name="com.droidhats.campuscompass.views.MapFragment"
        android:label="maps_fragment"
        tools:layout="@layout/map_fragment">
        <action
            android:id="@+id/action_mapsActivity_to_calendarFragment"
            app:destination="@id/nav_schedule"
            app:launchSingleTop="true" />
        <action
            android:id="@+id/action_map_fragment_to_floorFragment"
            app:destination="@id/floor_fragment" />
        <action
            android:id="@+id/action_map_fragment_to_search_fragment"
            app:destination="@id/search_fragment"
            app:enterAnim="@android:anim/fade_in"
            app:launchSingleTop="true" />
    </fragment>

    <fragment
        android:id="@+id/search_fragment"
        android:name="com.droidhats.campuscompass.views.SearchFragment"
        android:label="maps_fragment"
        tools:layout="@layout/search_fragment" >
    </fragment>

    <!--Note: Must be same id as the menu item-->
    <fragment
        android:id="@+id/nav_schedule"
        android:name="com.droidhats.campuscompass.views.CalendarFragment"
        tools:layout="@layout/calendar_fragment" >
        <action
            android:id="@+id/action_navSchedule_to_mapFragment"
            app:destination="@id/map_fragment"
            app:launchSingleTop="true"
            app:popUpTo="@id/nav_schedule"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/floor_fragment"
        android:name="com.droidhats.campuscompass.views.FloorFragment"
        android:label="floorFragment" >
        <action
            android:id="@+id/action_floor_fragment_to_map_fragment"
            app:destination="@id/map_fragment" />
        <action
            android:id="@+id/action_floor_fragment_to_search_fragment"
            app:destination="@id/search_fragment"
            app:enterAnim="@android:anim/fade_in" />
    </fragment>
    <fragment
        android:id="@+id/nav_shuttle"
        android:name="com.droidhats.campuscompass.views.ShuttleFragment"
        tools:layout="@layout/shuttle_fragment" >
    </fragment>
    <fragment
        android:id="@+id/my_places_fragment"
        android:name="com.droidhats.campuscompass.views.MyPlacesFragment"
        tools:layout="@layout/my_places_fragment">
        <action
            android:id="@+id/action_my_places_fragment_to_map_fragment"
            app:destination="@id/map_fragment"
            app:launchSingleTop="true"
            app:popUpTo="@id/my_places_fragment"
            app:popUpToInclusive="true"/>
    </fragment>
    <fragment
        android:id="@+id/nav_explore"
        android:name="com.droidhats.campuscompass.views.ExploreFragment"
        tools:layout="@layout/explore_fragment" >
    </fragment>
    <fragment
        android:id="@+id/explore_category_fragment"
        android:name="com.droidhats.campuscompass.views.ExploreCategoryFragment"
        tools:layout="@layout/explore_category_fragment" >
    </fragment>
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.droidhats.campuscompass.views.SettingsFragment"
        tools:layout="@layout/settings_fragment" >
    </fragment>
</navigation>