 <resources>
     <string name="app_name">Campus Compass</string>
     <string name="title_activity_maps">Campus Compass</string>
     <string name="splash_screen">Splash screen</string>
     <string name="cc_logo">Campus Compass Logo</string>
     <string name="cc_title">Campus Compass Title</string>
     <string name="cc_uni">Concordia University</string>
     <string name="Favorites_Feature_Name">My Places</string>
     <string name="Calendar_Feature_Name">Schedule</string>
     <string name="Explore_Feature_Name">Explore</string>
     <string name="Shuttle_Feature_Name">Shuttle Bus</string>
      <string name="Settings_Feature_Name">Settings</string>
     <string name="Map_Feature_Name">Map</string>
     <string name="Settings">Settings</string>
     <string name="sgw">SGW</string>
     <string name="loy">LOY</string>
     <string name="dash">-</string>
     <string name="directions">Directions</string>
     <string name="contentDescription_BuildingImage">Building Image</string>
     <string name="contentDescription_separator">Separating Building and Additional Information</string>
     <string name="contentDescription_CampusLogo">Campus Compass Logo</string>
     <string name="contentDescription_CampusTitle">Campus Compass Title Name</string>
     <string name="contentDescription_BackButton">Back</string>
     <string name="contentDescription_Navigate">Navigate</string>
     <string name="contentDescription_SetNavigation">SetNavigation</string>
     <string name="contentDescription_CloseButton">The close button</string>
     <string name="contentDescription_MinimizeButton">The minimize button</string>
     <string name="building">Building</string>
     <string name="address">Address</string>
     <string name="open_hours">Open hours:</string>
     <string name="hours_here">Hours here</string>
     <string name="services">Services:</string>
     <string name="services_here">Services here</string>
     <string name="departments">Departments:</string>
     <string name="departments_here">Departments here</string>
     <string name="select_calendars">Select Calendars</string>
     <string name="navigate">Navigate</string>
     <string name="x_button">X</string>
     <string name="minimize_button">Minimize</string>
     <string name="instructions">Instructions</string>
     <string name="place_name">Place Name</string>
     <string name="secondaryinfo">SecondaryInfo</string>
     <string name="save">Save</string>
     <string name="togglebutton">ToggleButton</string>
     <string name="searchInfo">Enter Street, Address, Concordia Classroom…</string>
     <string name="sample">sample</string>
     <string name="category">category</string>
     <string name="next_button">Next Button</string>
      <string name="previous_button">Previous Button</string>
      <string name="done">Done</string>
     <string name="explore">Explore</string>
 </resources>