<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/calendar_fragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/quantum_white_100"
        android:paddingTop="15dp"
        android:paddingBottom="15dp">

        <ImageButton
            android:id="@+id/button_menu"
            android:layout_width="100dp"
            android:layout_height="51dp"
            android:layout_marginTop="10dp"
            android:background="#FFFFFF"
            android:contentDescription="menu button"
            android:padding="30dp"
            android:src="@drawable/icon_menu" />

        <TextView
            android:id="@+id/text_calendar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="20dp"
            android:text="@string/Calendar_Feature_Name"
            android:textAlignment="center"
            android:textSize="24sp" />

    </RelativeLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <androidx.recyclerview.widget.RecyclerView xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/calendar_recycler_view"
            android:name="com.droidhats.campuscompass.CalendarFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:scrollbarStyle="insideInset"
            android:scrollbars="vertical"
            app:layoutManager="LinearLayoutManager"
            tools:context=".views.CalendarFragment"
            tools:listitem="@layout/calendar_recycler_item" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="15dp"
        android:paddingTop="15dp">

        <TextView
            android:id="@+id/text_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:textAlignment="center"
            android:textSize="15sp"
            />

        <Button
            android:id="@+id/select_calendar_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:text="@string/select_calendars"
            android:textAllCaps="false"
            android:textColor="@color/quantum_white_text"
            android:background="@drawable/button_color"
            android:paddingStart="55dp"
            android:paddingEnd="55dp"
            android:paddingBottom="14dp"
            android:paddingTop="12dp" />

    </LinearLayout>

</LinearLayout>