<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/calendar_card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="6dp"
    app:cardElevation="4dp"
    app:contentPadding="3dp"
    android:foreground="?android:attr/selectableItemBackground">
...
            android:textColor="@color/white"
        />

    </LinearLayout>

    <ImageButton
        android:id="@+id/navigateFromEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|center_vertical"
        android:background="?selectableItemBackgroundBorderless"
        android:contentDescription="@string/navigate"
        android:paddingEnd="15dp"
...
